2012-02-29  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [CMake] Unreviewed, fix build on 64-bit platforms with SHARED_CORE=ON after r109197.
        https://bugs.webkit.org/show_bug.cgi?id=79965

        This partially reverts r66714, in that whether -fPIC is passed to
        the compiler does not depend on the value of SHARED_CORE anymore:
        since we always build WTF as a static library, it will always need
        -fPIC because our shared libraries are built with it.

        * Source/cmake/WebKitHelpers.cmake: Always pass -fPIC to
        STATIC_LIBRARY targets.

2012-02-29  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [CMake] Unreviewed, fix build on 64-bit platforms with SHARED_CORE=ON after r109197.

        This partially reverts r66714, in that whether -fPIC is passed to
        the compiler does not depend on the value of SHARED_CORE anymore:
        since we always build WTF as a static library, it will always need
        -fPIC because our shared libraries are built with it.

        * Source/cmake/WebKitHelpers.cmake: Always pass -fPIC to
        STATIC_LIBRARY targets.

2012-02-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Bump WebKitGTK+ version number.

        * configure.ac: Bump version number to 1.9.0 now that we branched
        for 1.8.

2012-02-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix GTK+ build.

        * Source/autotools/symbols.filter: Add symbol.

2012-02-28  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [CMake] Always build wtf as a static library.
        https://bugs.webkit.org/show_bug.cgi?id=79857

        Reviewed by Eric Seidel.

        * CMakeLists.txt: Put static libraries in ${CMAKE_BINARY_DIR} too
        to have them grouped with the shared ones.

2012-02-28  Ryosuke Niwa  <rniwa@webkit.org>

        perf-o-matic: generate dashboard images using Google Chart Tools
        https://bugs.webkit.org/show_bug.cgi?id=79838
